# PLP-project

./: .gitignore  README.md  plp-project.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/1c03ccbb/: cabal_macros.h
.stack-work/ghci/675bb3bd/: cabal_macros.h
.stack-work/ghci/697513b2/: cabal_macros.h
.stack-work/ghci/6e202989/: cabal_macros.h
.stack-work/ghci/89f4abe4/: cabal_macros.h
.stack-work/ghci/9ef5a5f7/: cabal_macros.h
.stack-work/ghci/becbe6a7/: cabal_macros.h
.stack-work/install/0d39dc4e/lib/x86_64-windows-ghc-9.10.2-cea6/plp-project-0.1.0.0-Qq5itYRSXrHfaIHzgdb2G/: EstadoGlobal.hi
.stack-work/install/0d39dc4e/pkgdb/: package.cache  plp-project-0.1.0.0-Qq5itYRSXrHfaIHzgdb2G.conf
.stack-work/install/45320db2/lib/x86_64-windows-ghc-9.10.2-cea6/plp-project-0.1.0.0-BaByyeiM0611VBYBJkStw5/: EstadoGlobal.hi
.stack-work/install/45320db2/lib/x86_64-windows-ghc-9.10.2-cea6/plp-project-0.1.0.0-CQydlvw5fMVBdAq9WPdec5/: EstadoGlobal.hi
.stack-work/install/45320db2/lib/x86_64-windows-ghc-9.10.2-cea6/plp-project-0.1.0.0-Qq5itYRSXrHfaIHzgdb2G/: EstadoGlobal.hi
.stack-work/install/45320db2/pkgdb/: package.cache  plp-project-0.1.0.0-BaByyeiM0611VBYBJkStw5.conf  plp-project-0.1.0.0-Qq5itYRSXrHfaIHzgdb2G.conf
.stack-work/install/f2619c20/lib/x86_64-windows-ghc-9.10.2-cea6/plp-project-0.1.0.0-Qq5itYRSXrHfaIHzgdb2G/: EstadoGlobal.hi
data/: dados_jogo.json
src/: EstadoGlobal.hs  Main.hs
src/Interface/: BaccaratUI.hs  BlackjackUI.hs  CacaNiquelUI.hs  CaixaSurpresaUI.hs  MainUI.hs  MenuUI.hs  RankingUI.hs  RoletaUI.hs
src/Jogos/: Baccarat.hs  Blackjack.hs  CacaNiquel.hs  CaixaSurpresa.hs  Roleta.hs
