cabal-version:       >=1.10
name:                plp-project
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     EstadoGlobal
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       aeson,
                       bytestring,
                       directory,
                       containers,
                       random >= 1.2 && < 1.3,
                       threepenny-gui >= 0.9.4
  default-language:    Haskell2010

executable plp-project-exe
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base,
                       aeson,
                       bytestring,
                       directory,
                       containers,
                       plp-project,
                       random >= 1.2 && < 1.3,
                       threepenny-gui >= 0.9.4
  default-language:    Haskell2010
  other-modules: Jogos.CaixaSurpresa,
                 EstadoGlobal, 
                 Jogos.CacaNiquel,
                 Interface.MainUI,
                 Interface.MenuUI
